fix: overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   background: black;
+  overflow: hidden;
 }
 
 h1 {
